Adjustments for getting MekWars to compile. Added methods back into MM. De-depreciated methods in MM.